JumpScript/tests/baselines/reference/unusedSingleParameterInMethodDeclaration.errors.txt
tests/cases/compiler/unusedSingleParameterInMethodDeclaration.jump(2,20): error TS6133: 'person' is declared but its value is never read.
tests/cases/compiler/unusedSingleParameterInMethodDeclaration.jump(3,13): error TS6133: 'unused' is declared but its value is never read.


==== tests/cases/compiler/unusedSingleParameterInMethodDeclaration.jump (2 errors) ====
    class Dummy {
        public greeter(person: string) {
                       ~~~~~~
!!! error TS6133: 'person' is declared but its value is never read.
            var unused = 20;
                ~~~~~~
!!! error TS6133: 'unused' is declared but its value is never read.
        }
    }